--- a/WebApiDemo/Properties/launchSettings.json
+++ b/WebApiDemo/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "WebApiDemo": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
